--- a/styles/enterWorkouts.css
+++ b/styles/enterWorkouts.css
@@ -1,3 +1,20 @@
-#hw{
+#titlebanner{
     font-size: 48px;
+    text-align: center;
+    padding: 5px;
+}
+
+#titlewrapper{
+    border: 2px solid;
+    margin-left: 50px;
+    margin-right: 50px;
+    background-color: aqua;
+}
+
+#enterData{
+    border: 2px solid;
+    margin-top: 50px;
+    margin-left: 50px;
+    width: 400px;
+    height: 300px;
 }
