--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,42 @@
-#hw{
-    font-size: 48px;
+body {
+    font-family: 'Tienne';
+    color: #1B2021;
+}
+
+#topBar {
+    height: 148px;
+    background-color: #0075A2;
+    width: 100%;
+    color: #00FFC5;
+    font-size: 64px;
+    display: table;
+    font-family: 'Tharlon';
+    text-shadow: 1px 2px #05B28B;
+    z-index: 1;
+    
+    
+    
+}
+
+#topBarText {
+    vertical-align: middle;
+    display: table-cell;
+
+}
+
+#sideBar {
+    width: 202px;
+    height: 100%;
+    background-color: #00FFC5;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.sideBarButtons {
+    height: 66px;
+    width: 202px;
+    background-color: #06DEAD;
+    font-size: 24px;
 }
