--- a/styles/enterWorkouts.css
+++ b/styles/enterWorkouts.css
@@ -17,6 +17,19 @@
     margin-left: 50px;
     width: 500px;
     height: 300px;
+    position: relative;
+    display:inline-block
+}
+
+#showData{
+    border: 2px solid;
+    margin-top: 50px;
+    margin-right: 50px;
+    float: right;
+    width: 500px;
+    height: 300px;
+    position: relative;
+    display:inline-block
 }
 
 .dataparent{
