Made some small formatting changes to rewards.html. Changed sidebar behavior to sticky positioning

--- a/styles/rewards.css
+++ b/styles/rewards.css
@@ -1,11 +1,10 @@
-#sideBar {
-  position: relative;
-}
 #pageContents {
   display: flex;
 }
 
 #rewardsPage {
+  display: inline-block;
+  height: 100%;
   margin: 40px;
   flex-grow: 2;
 }
