--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,11 @@ body {
     position: relative;
 }
 
+html, body
+{
+    margin: 0px; padding: 0px
+}
+
 #topBar {
     height: 148px;
     background-color: #0075A2;
