--- a/styles/enterWorkouts.css
+++ b/styles/enterWorkouts.css
@@ -8,7 +8,7 @@
     border: 2px solid;
     margin-left: 50px;
     margin-right: 50px;
-    background-color: #00ffc5;
+    background-color: #0075A2;
 }
 
 #enterData{
