--- a/styles/index.css
+++ b/styles/index.css
@@ -59,8 +59,8 @@ html, body
     left: 25%;
     top: 23%;
     z-index: -1;
-    background-color: #00FFC5;;
-    border: 2px solid #06DEAD;;
+    background-color: #00FFC5;
+    border: 2px solid #06DEAD;
 }
 
 #leaderboardChart {
@@ -83,4 +83,12 @@ html, body
     border-width: 3px;
     border-color: #C81231;
     font-size: 24px;
+}
+
+#settingsGearImg {
+    width: 125px;
+    height: 125px;
+    position: absolute;
+    left: 80%;
+    top: 80%;
 }
