Rewards mostly complete

--- a/styles/rewards.css
+++ b/styles/rewards.css
@@ -26,7 +26,7 @@
   margin: 10px;
 }
 
-#rewardsGrid {
+.rewardsGrid {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -86,8 +86,14 @@
   transform: rotateY(180deg);
 }
 
-.rewardDesc {
+.rewardTitle {
   color: white;
+  font-size: 24px;
+  text-align: center;
+}
+
+.rewardDesc {
+  color: gray;
   font-size: 20px;
   text-align: center;
 }
