Changed to new color pallette

--- a/styles/enterWorkouts.css
+++ b/styles/enterWorkouts.css
@@ -11,10 +11,10 @@
 }
 
 #titlewrapper{
-    border: 2px solid #06DEAD;
+    border: 2px solid #3F8D47;
     margin-left: 50px;
     margin-right: 50px;
-    background-color: #00FFC5;
+    background-color: #4DAA57;
 }
 
 #data {
