--- a/styles/profile.css
+++ b/styles/profile.css
@@ -128,13 +128,13 @@ body {
 
 #topBar {
     height: 148px;
-    background-color: #0075A2;
+    background-color: #1E3F20;
     width: 100%;
-    color: #00FFC5;
+    color: #64B96D;
     font-size: 64px;
     display: table;
     font-family: 'Tharlon';
-    text-shadow: 1px 2px #05B28B;
+    text-shadow: 1px 2px #4DAA57;
     z-index: 3;
 }
 
@@ -149,7 +149,7 @@ body {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    background-color: #00FFC5;
+    background-color: #4DAA57;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -159,7 +159,7 @@ body {
 .sideBarButtons {
     height: 80px;
     width: 202px;
-    background-color: #06DEAD;
+    background-color: #3F8D47;
     font-size: 24px;
     font-family: 'Tienne';
     border-width: 0px;
@@ -173,9 +173,9 @@ body {
     left: 25%;
     top: 120%;
     z-index: -1;
-    background-color: #00FFC5;
+    background-color: #4DAA57;
     ;
-    border: 2px solid #06DEAD;
+    border: 2px solid #345830;
     ;
 }
 
@@ -194,15 +194,15 @@ body {
     top: 410%;
     width: 400px;
     height: 100px;
-    background-color: #F21B3F;
+    background-color: #F3933F;
     font-family: 'Tienne';
     border-width: 3px;
-    border-color: #C81231;
+    border-color: #F2882C;
     font-size: 24px;
 }
 
 #timeDropBtn {
-    background-color: #06DEAD;
+    background-color: #F3933F;
     color: white;
     padding: 16px;
     font-size: 16px;
