--- a/styles/index.css
+++ b/styles/index.css
@@ -17,7 +17,7 @@ html, body
     font-size: 64px;
     display: table;
     font-family: 'Tharlon';
-    text-shadow: 1px 2px #4DAA57;
+    text-shadow: 1px 2px #3F8D47;
     z-index: 3;
     
     
